# libmetal

./: .vscode-ctags  CMakeLists.txt  README
libmetal/: CMakeLists.txt  MAINTAINERS.md  README.md
libmetal/cmake/: options.cmake  syscheck.cmake
libmetal/lib/: atomic.h  device.c  dma.c  io.c  io.h  irq.c  list.h  log.h  shmem.c  softirq.c
libmetal/lib/compiler/gcc/: compiler.h
libmetal/lib/compiler/iar/: compiler.h
libmetal/lib/processor/: CMakeLists.txt
libmetal/lib/processor/hosted/: atomic.h  cpu.h
libmetal/lib/processor/x86/: cpu.h
libmetal/lib/system/freertos/: sleep.h  sys.h
libmetal/lib/system/freertos/template/: sys.h
libmetal/lib/system/freertos/xlnx/: sys.c  sys.h
libmetal/lib/system/freertos/xlnx_common/: irq.c
libmetal/lib/system/freertos/zynq7/: sys.c
libmetal/lib/system/freertos/zynqmp_a53/: sys.c
libmetal/lib/system/freertos/zynqmp_r5/: sys.c
libmetal/lib/system/generic/: CMakeLists.txt  condition.h  sys.h
libmetal/lib/system/generic/microblaze_generic/: sys.c
libmetal/lib/system/generic/xlnx/: CMakeLists.txt  sys.h  sys_devicetree.h
libmetal/lib/system/generic/xlnx_common/: irq.c
libmetal/lib/system/generic/zynq7/: sys.c
libmetal/lib/system/generic/zynqmp_a53/: sys.c
libmetal/lib/system/generic/zynqmp_a72/: CMakeLists.txt  sys.h
libmetal/lib/system/generic/zynqmp_a78/: sys.h
libmetal/lib/system/linux/: condition.h  device.c  sys.h
libmetal/lib/system/nuttx/: init.c  io.c  irq.c  sys.h
libmetal/lib/system/zephyr/: CMakeLists.txt  cache.h  log.c  mutex.h  sleep.h  sys.h  time.c
(+8 files in other folders)
